# godot-rs-config

./: Cargo.toml  README.md
src/: main.rs
src/api/: mod.rs
tests/examples/: player.rs
tests/features/: project.feature
